Sat Sep 25 04:04:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c: iterator functions for hash_foreach() should return enum
	  st_retval.

Sat Sep 25 01:52:49 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* struct.c (rb_struct_s_members): wrong call of struct_members.
	  [ruby-dev:24333]

Fri Sep 24 16:09:42 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_invoke): propagate DVAR_DONT_RECYCLE on termination
	  to avoid double call to rb_gc_force_recycle(). [ruby-dev:24311]

Fri Sep 24 08:29:45 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (rb_parser_append_print): should handle prelude.
	  [llama@u01.gate0]

	* parse.y (rb_parser_while_loop): ditto.

	* array.c (rb_ary_subseq): original object might be modified after
	  sharing data creation.  [ruby-dev:24327]

	* array.c (rb_ary_replace): ditto.

	* array.c (ary_make_shared): freeze shared array. [ruby-dev:24325]

	* struct.c (struct_members): always check struct size and size of
	  members list in the class.  [ruby-dev:24320]

Thu Sep 23 19:48:14 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/Makefile.dev: removed.

	* ext/ripper/ripper.rb.in: moved to lib/ripper/core.rb.in.

	* ext/ripper/lib/ripper/core.rb: new file.

	* ext/ripper/lib/ripper/core.rb.in: new file.

	* ext/ripper/tools/generate-ripper_rb.rb: change comment.

	* test/ripper/*.rb: on__scan event removed.

	* test/ripper/*.rb: event name is changed: on__XXX -> on_XXX.

Thu Sep 23 09:29:14 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_sub_bang): check if string is not modified
	  during iteration.  [ruby-dev:24315]

	* hash.c (rb_hash_rehash): replace st_foreach() by its deep
	  checking counterpart.  [ruby-dev:24310]

Wed Sep 22 14:21:54 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: on__scan event removed.

	* parse.y [ripper]: event name is changed: on__XXX -> on_XXX.

	* ext/ripper/eventids2.c: ditto.

	* ext/ripper/ripper.rb.in: ditto.
