@@ -1,3 +1,9 @@
+Sun Sep 26 08:05:10 2004  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* lib/date.rb: provides {Time,Date,DateTime}#to_{time,date,datetime}.
+
+	* sample/cal.rb: uses getoptlong instead of getopts.
+
 Sat Sep 25 04:04:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* hash.c: iterator functions for hash_foreach() should return enum
